--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
 
 <h1>My First Git Page</h1>
+ <a href="/JavaEE/DhabaStyle/index.html">Restaurant Project</a>
+ <a href="#">Weather Javascript Project</a>
 
 
 </body>
