--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>My First Git Page</h1>
- <a href="/JavaEE/DhabaStyle/index.html">Restaurant Project</a>
+ <a href="/JavaEE/DhabaStyle/index.html">Restaurant Project</a></br>
  <a href="#">Weather Javascript Project</a>
 
 
