added weather api

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>My First Git Page</h1>
  <a href="/JavaEE/DhabaStyle/index.html">Restaurant Project</a></br>
- <a href="#">Weather Javascript Project</a>
+ <a href="/JavaEE/WeatherApi/index.html">Weather Javascript Project</a>
 
 
 </body>
