--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <body>
 
-<h1>My First Git Page</h1>
- <a href="/JavaEE/DhabaStyle/index.html">Restaurant Project</a></br>
- <a href="/JavaEE/WeatherApi/index.html">Weather Javascript Project</a>
+<h1>Hi ALL</h1>
+ 
 
 
 </body>
