--- a/index.html
+++ b/index.html
@@ -11805,21 +11805,8 @@ body {
 <div class="background background14"></div>
 <div class="background background15"></div>
 <div class="criterion">
-  <div class="text text0">G</div>
-  <div class="text text1">o</div>
-  <div class="text text2">o</div>
-  <div class="text text3">d</div>
-  <div class="text text4">M</div>
-  <div class="text text5">o</div>
-  <div class="text text6">r</div>
-  <div class="text text7">n</div>
-  <div class="text text8">i</div>
-  <div class="text text9">n</div>
-  <div class="text text10">g</div>
-  <div class="text text11">M</div>
-  <div class="text text12">A</div>
-  <div class="text text13">R</div>
-  <div class="text text14">I</div>
+  <div class="text text0">Helooo Helooo</div>
+ 
   <div class="text text15">: )</div>
   <div class="frame frame0"></div>
   <div class="frame frame1"></div>
