--- a/index.html
+++ b/index.html
@@ -11805,7 +11805,7 @@ body {
 <div class="background background14"></div>
 <div class="background background15"></div>
 <div class="criterion">
-  <div class="text text0">Helooo Helooo</div>
+  <div class="text text0">Hlo Hlo</div>
  
   <div class="text text15">: )</div>
   <div class="frame frame0"></div>
